--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
             movement, <a href="https://learnenough.com/email">sign up for our official email list</a> now.
         </p>
 
+        <P>
+            <a href="https://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none;">
+                <img src="FILL_IN">
+            </a>
+            You should follow Learn Enough on Twitter
+            <a href="https://twitter.com/learnenough" target="_blank" rel="noopener">here</a>
+        </P>
+
         <p>
             HTML was created by the original "web developer", computer scientist
             <a href="https://en.wikipedia.org/Tim_Berners-Lee">Tim Berners-Lee</a>. it's not true 
             that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.
         </p>
 
-        <img src="images/kitten.jpg" alt="An adorable kitten">
+        <img href="FILL_IN" src="images/kitten.jpg" alt="An adorable kitten">
 
         <h2>Background</h2>
 
